modified:   .gitignore 	modified:   iskanje_apartmajev.ipynb

--- a/iskanje_apartmajev.ipynb
+++ b/iskanje_apartmajev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "    \n",
-    "import main; importlib.reload(main);"
+    "import main; \n",
+    "importlib.reload(main);"
    ]
   },
   {
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "id": "ead74c4f",
    "metadata": {},
    "outputs": [],
@@ -62,12 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "id": "eda89d98",
    "metadata": {},
    "outputs": [],
    "source": [
-    "podrobna_analiza = 150\n",
+    "podrobna_analiza = 60\n",
     "brskalnik = \"firefox\"\n",
     "#brskalnik = \"edge\"\n",
     "#brskalnik = \"chrome\"\n",
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "id": "82b622bf",
    "metadata": {},
    "outputs": [],
