modified:   README.md 	modified:   iskanje_apartmajev.ipynb 	modified:   mymodule/analiza_glavne_strani.py 	modified:   mymodule/ustvarjanje_tabel.py

--- a/iskanje_apartmajev.ipynb
+++ b/iskanje_apartmajev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "ead74c4f",
    "metadata": {},
    "outputs": [],
@@ -44,9 +44,9 @@
     "okolica = \"zadar-i-okolica\"\n",
     "kraj = \"sukosan\"\n",
     "glavni_naslov = \"rogoznica\"\n",
-    "i = True\n",
+    "tip_urlja = 2\n",
     "\n",
-    "df_vsi_apartmaji = main.ustvari_df_glavne_strani(prihod, odhod, osebe, okolica, kraj, glavni_naslov, i)"
+    "df_vsi_apartmaji = main.ustvari_df_glavne_strani(prihod, odhod, osebe, okolica, kraj, glavni_naslov, tip_urlja)"
    ]
   },
   {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "eda89d98",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "82b622bf",
    "metadata": {},
    "outputs": [],
