Izboljšava uporabniške izkušnje.

--- a/iskanje_apartmajev.ipynb
+++ b/iskanje_apartmajev.ipynb
@@ -2,20 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'analiza_glavne_strani'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 12\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#import sys\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#import os\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#import importlib\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m#importlib.reload(main);\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m#import mymodule.main\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmymodule\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m main\n",
+      "File \u001b[1;32mc:\\Users\\lavse\\Desktop\\iskanje_apartmajev\\mymodule\\main.py:3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#import importlib\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01manaliza_glavne_strani\u001b[39;00m \n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01manaliza_podstrani\u001b[39;00m   \n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01manaliza_z_selenium\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'analiza_glavne_strani'"
+     ]
+    }
+   ],
    "source": [
-    "import sys\n",
-    "import os\n",
-    "import importlib\n",
+    "#import sys\n",
+    "#import os\n",
+    "#import importlib\n",
     "\n",
-    "module_path = os.path.abspath(os.path.join('.', 'mymodule'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)\n",
+    "#module_path = os.path.abspath(os.path.join('.', 'mymodule'))\n",
+    "#if module_path not in sys.path:\n",
+    " #   sys.path.append(module_path)\n",
     "    \n",
-    "import main; \n",
-    "importlib.reload(main);"
+    "#import main; \n",
+    "#importlib.reload(main);\n",
+    "#import mymodule.main\n",
+    "from mymodule import main\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f9972e5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'12.23-12.23'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main.datum_od_do(\"12.23.2004\", \"12.23.2004\")"
    ]
   },
   {
@@ -33,10 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "ead74c4f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ustvarjanje_tabel' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m glavni_naslov \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrogoznica\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      7\u001b[0m tip_urlja \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[1;32m----> 9\u001b[0m df_vsi_apartmaji \u001b[38;5;241m=\u001b[39m \u001b[43mmain\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mustvari_df_glavne_strani\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprihod\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43modhod\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mosebe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mokolica\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkraj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mglavni_naslov\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtip_urlja\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\lavse\\Desktop\\iskanje_apartmajev\\mymodule\\main.py:25\u001b[0m, in \u001b[0;36mustvari_df_glavne_strani\u001b[1;34m(zacetek, konec, osebe, okolica, kraj, glavni_naslov, i)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mustvari_df_glavne_strani\u001b[39m(zacetek, konec, osebe, okolica, kraj, glavni_naslov, i):\n\u001b[0;32m     24\u001b[0m     a \u001b[38;5;241m=\u001b[39m izlusci_podatke(zacetek, konec, osebe, okolica, kraj, glavni_naslov, i)\n\u001b[1;32m---> 25\u001b[0m     \u001b[43mustvarjanje_tabel\u001b[49m\u001b[38;5;241m.\u001b[39mcreate_excel(a)\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m ustvarjanje_tabel\u001b[38;5;241m.\u001b[39mcreate_csv(a)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ustvarjanje_tabel' is not defined"
+     ]
+    }
+   ],
    "source": [
     "prihod = \"01.08.2024\"\n",
     "odhod = \"08.08.2024\"\n",
