modified:   mymodule/analiza_apartmajev.ipynb

--- a/mymodule/analiza_apartmajev.ipynb
+++ b/mymodule/analiza_apartmajev.ipynb
@@ -457,9 +457,9 @@
    ],
    "source": [
     "podrobna_analiza = 60\n",
-    "#brskalnik = \"chrome\"\n",
+    "brskalnik = \"chrome\"\n",
     "#brskalnik = \"edge\"\n",
-    "brskalnik = \"firefox\"\n",
+    "#brskalnik = \"firefox\"\n",
     "\n",
     "df_par_apartmajev_natancno = main.ustvari_podroben_csv(df_vsi_apartmaji, podrobna_analiza, prihod, odhod, brskalnik)\n",
     "df_par_apartmajev_natancno"
