modified:   mymodule/analiza_apartmajev.ipynb

--- a/mymodule/analiza_apartmajev.ipynb
+++ b/mymodule/analiza_apartmajev.ipynb
@@ -27,7 +27,7 @@
     "### Opis tabele, ki jo ustvari naslednja celica:\n",
     "   - *V tabeli najdete imena apartmajev*\n",
     "   - *Ceno v evrih*\n",
-    "   - *Kapaciteto v obliki *[minimalno število oseb, maksimalno število oseb]**\n",
+    "   - *Kapaciteto v obliki [minimalno število oseb, maksimalno število oseb]*\n",
     "   - *Povezavo do apartmaja*"
    ]
   },
