modified:   mymodule/analiza_apartmajev.ipynb

--- a/mymodule/analiza_apartmajev.ipynb
+++ b/mymodule/analiza_apartmajev.ipynb
@@ -524,6 +524,14 @@
    "source": [
     "main.graf(df_par_apartmajev_natancno)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e011cd1",
+   "metadata": {},
+   "source": [
+    "### Vse grafe in tabele najdete tudi v datoteki **grafi_in_tabele,** vse html dokumente pa v datoteki **shranjevanje_strani.**"
+   ]
   }
  ],
  "metadata": {
